--- a/ECF_Back/src/main/resources/hibernate.properties
+++ b/ECF_Back/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-hibernate.connection.driver_class = com.mysql.jdbc.Driver
-hibernate.connection.url = jdbc:mysql://localhost:3306/products
+hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
+hibernate.connection.url = jdbc:mysql://localhost:3306/highschool
 hibernate.connection.username = root
 hibernate.connection.password = 25542554
 hibernate.show_sql = true
